tests/good/typing/041-choice-type.clap
type t <a, b> = { Some a + Any b + None }
