tests/bad/syntax/015-deep-sum-product-type.clap
type tree_structure <subtree, element> = 
  { Empty 
  + Leaf Element
  + Node { Left subtree * Right subtree } 
  }

